[metadata]
name = muve-traffic-sumo-server
version = 0.0.0
url = https://github.com/muve-traffic/sumo-server
download_url = https://github.com/muve-traffic/sumo-server/tags

author = Ziyad Edher
author-email = ziyad.edher@gmail.com

home-page = https://github.com/muve-traffic/sumo-server
description = Server for simulating traffic and relaying traffic information programatically through SUMO.
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

platform = any
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: MIT License
  Typing :: Typed

[options]
packages = find:
zip_safe = false
include_package_data = true

python_requires =
  >= 3.7

# install_requires =

[options.extras_require]
lint =
  flake8
  flake8-2020
  flake8-black
  flake8-broken-line
  flake8-bugbear
  flake8-builtins
  flake8-commas
  flake8-comprehensions
  flake8-debugger
  flake8-eradicate
  flake8-executable
  flake8-fixme
  flake8-pytest-style
  flake8-quotes
  pep8-naming
  flake8-use-fstring
  darglint
  flake8-docstrings
  flake8-markdown
  flake8-rst-docstrings
  flake8-rst
  flake8-polyfill
  flake8-isort
  flake8-absolute-import
  dlint
  flake8-bandit
  flake8-isort
  flake8-assertive
  flake8-annotations-complexity
  flake8-annotations
  hacking
  mypy
test =
  pytest
  coverage
tox =
  tox
docs =
  sphinx
  sphinx-autodoc-typehints

[flake8]
exclude =
  __pycache__
  docs/*
filename =
  *.py
ignore =
  E121,
  E123,
  E126,
  E226,
  E24,
  E704,
  W503,
  W504,
  ANN101,  # type annotation for self in method
  ANN102,  # type annotation for cls in classmethod
  H301,    # one import per line
per-file-ignores=
  tests/*:D101,D102,D103,S101
max-line-length = 119
max-doc-length = 119
doctests = true
max-complexity = 16
docstring-style = sphinx
inline-quotes = double
multiline-quotes = double
docstring-quotes = double
rst-roles =
  func,
  meth,
  mod,

[mypy]
files = muve/**/*.py
namespace_packages = true
ignore_missing_imports = false
follow_imports = normal
follow_imports_for_stubs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
show_none_errors = true
ignore_errors = false
allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true
incremental = true
